--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node API 1 Project Code",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon ./server.js",
     "start": "node index.js",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand"
   },
@@ -19,6 +20,7 @@
     "url": "git+https://github.com/BloomInstituteOfTechnology/node-api1-project.git"
   },
   "dependencies": {
+    "express": "^4.17.2",
     "nanoid": "^3.1.30"
   }
 }
